--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,73 @@
-.App {
-  text-align: center;
+.container {
+  display: flex;
+  background-color: rgb(59, 59, 59);
+  width: 100vw;
+  height: 100vh;
+  justify-content: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.sectionOne {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 2rem;
+}
+
+.addComment {
+  margin: 1rem;
+  background-color: rgb(50, 26, 71);
+  padding: 1rem;
+  border-radius: 1rem;
+  width: 80vw;
+  text-align: center;
+  
+}
+
+.comment {
+  margin: 0.3rem;
+  background-color: rgb(50, 26, 71);
+  padding: 1rem;
+  border-radius: 1rem;
+  width: 80vw;
+  text-align: center;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  
+}
+.commentBox{
+  border: 2px solid rgb(247, 103, 103);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 0.4rem;
+  border-radius: 1rem;
+  width: 120px;
+  margin: 0.3rem;
+  font-size: 14px;
 }
 
-.App-link {
-  color: #61dafb;
+.showComments {
+  margin: 0.3rem;
+  background-color: rgb(50, 26, 71);
+  padding: 1rem;
+  border-radius: 1rem;
+  width: 80vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 100px;
+  
+ 
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input {
+  color: black;
+  font-size: 14px;
+}
+.btn {
+  color: black;
+  padding: 0.3rem;
+  margin-top: 1rem;
+  width: 60px;
+  text-align: center;
+  font-weight: bold;
 }
